--- a/beer_app_mvvm/pubspec.yaml
+++ b/beer_app_mvvm/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.6
   flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
